@@ -7,7 +7,7 @@ bin_PROGRAMS = hashdeep
 
 hashdeep_SOURCES = main.cpp hashlist.cpp multihash.cpp display.cpp \
 	hash.cpp dig.cpp ui.cpp helpers.cpp xml.cpp files.cpp common.h main.h md5deep.h \
-	tchar-local.h xml.h  \
+	wstring.h xml.h  \
 	utf8.h utf8/checked.h utf8/core.h utf8/unchecked.h \
 	${ALGS}
 
